--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
 
                          <div class="col-md-6 col-sm-6">
                               <ul class="social-icon">
-                                   <li><a href="https://www.facebook.com/Shop-Store-Agency-100896639020763/" class="fa fa-facebook-square" attr="facebook icon"></a></li>
-                                   <li><a href="https://twitter.com/shopstoreagency" class="fa fa-twitter"></a></li>
-                                   <li><a href="https://www.instagram.com/shopstoreagency/" class="fa fa-instagram"></a></li>
+                                   <li><a href="https://www.facebook.com/Shop-Store-Agency-100896639020763/" class="fa fa-facebook-square" attr="facebook icon" target="_blank"></a></li>
+                                   <li><a href="https://twitter.com/shopstoreagency" class="fa fa-twitter" target="_blank"></a></li>
+                                   <li><a href="https://www.instagram.com/shopstoreagency/" class="fa fa-instagram" target="_blank"></a></li>
                               </ul>
                          </div>
                     </div>
