--- a/index.html
+++ b/index.html
@@ -229,18 +229,18 @@
 
                               <div class="owl-carousel owl-theme">
                                    <div class="item">
-                                        <h3>Vestibulum tempor facilisis efficitur. Sed nec nisi sit amet nibh pellentesque elementum. In viverra ipsum ornare sapien rhoncus ullamcorper.</h3>
+                                        <h3>I am very happy to work with them. I've ready two stores so far.</h3>
                                         <div class="testimonial-item">
                                              <img src="images/tst-image1.jpg" class="img-responsive" alt="Michael">
-                                             <h4>Michael</h4>
+                                             <h4>Hamish Duddy</h4>
                                         </div>
                                    </div>
 
                                    <div class="item">
-                                        <h3>Donec pretium tristique elit eget sodales. Pellentesque posuere, nunc id interdum venenatis, leo odio cursus sapien, ac malesuada nisl libero eget urna.</h3>
+                                        <h3>You can work with them if you want. I am impressed to have their support.</h3>
                                         <div class="testimonial-item">
                                              <img src="images/tst-image2.jpg" class="img-responsive" alt="Sofia">
-                                             <h4>Sofia</h4>
+                                             <h4>Bellamayven</h4>
                                         </div>
                                    </div>
 
@@ -248,7 +248,7 @@
                                         <h3>Lorem ipsum dolor sit amet, consectetur adipisicing eiusmod tempor incididunt ut labore et dolore magna.</h3>
                                         <div class="testimonial-item">
                                              <img src="images/tst-image3.jpg" class="img-responsive" alt="Monica">
-                                             <h4>Monica</h4>
+                                             <h4>jenifar</h4>
                                         </div>
                                    </div>
                               </div>
